--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,17 +214,6 @@ nav .nav-bar .logo a{
         z-index: 100;
         transition: all 0.4s ease;
     }
-    /*.menu::before{
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        left: 0;
-        top: 0;
-        padding: 20px;
-        background-color: var(--white);
-        z-index: 100;
-        transition: all 0.4s ease;
-    }*/
     nav.active .menu{
         left: -0%;
     }
@@ -266,4 +255,10 @@ nav .nav-bar .logo a{
 	.menu .logo-toggle a img{
 		width: 170px;
 	}
+    .hero{
+        height: 90vh;
+    }
+    .lead{
+        font-size: 1rem;
+    }
 }
