--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@
 *{
 	font-family: 'Poppins', sans-serif;
 }
+p{
+    color: var(--dark);
+}
 .section-head h2{
     color: var(--blue);
 }
@@ -51,11 +54,9 @@ nav{
 nav .nav-bar{
     position: relative;
     height: 100%;
-    max-width: 90%;
     width: 100%;
     background-color: var(--white);
-    margin: 0 auto;
-    padding: 0 30px;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -680,7 +681,6 @@ nav .nav-bar .logo a{
 }
 .faq {
     background: var(--white);
-    min-height: 100vh;
 }
 .faq .section-title {
     margin-bottom: 54px;
@@ -776,14 +776,83 @@ footer .top-footer h2{
 footer .top-footer .demo_class{
     background-color: var(--blue);
     color: var(--white);
+    transition: all 0.6s;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+footer .top-footer .demo_class:hover::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10%;
+    width: 100%;
+    height: 2px;
+    transform: rotate(45deg);
+    background: var(--white);
+    transition: all 0.3s;
+    box-shadow: 0px 0px 10px var(--white),
+                0px 0px 20px var(--white),
+                0px 0px 10px var(--white),
+                0px 0px 10px var(--white);
+    z-index: -1;
+    animation: hero-btn;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
 }
 footer .top-footer .browse_course{
     background-color: var(--orange);
     color: var(--white);
+    transition: all 0.6s;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+footer .top-footer .browse_course:hover::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10%;
+    width: 100%;
+    height: 2px;
+    transform: rotate(45deg);
+    background: var(--white);
+    transition: all 0.3s;
+    box-shadow: 0px 0px 10px var(--white),
+                0px 0px 20px var(--white),
+                0px 0px 10px var(--white),
+                0px 0px 10px var(--white);
+    z-index: -1;
+    animation: hero-btn;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
 }
 footer .top-footer .free_seminer{
     background-color: var(--blue);
     color: var(--white);
+    transition: all 0.6s;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+footer .top-footer .free_seminer:hover::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10%;
+    width: 100%;
+    height: 2px;
+    transform: rotate(45deg);
+    background: var(--white);
+    transition: all 0.3s;
+    box-shadow: 0px 0px 10px var(--white),
+                0px 0px 20px var(--white),
+                0px 0px 10px var(--white),
+                0px 0px 10px var(--white);
+    z-index: -1;
+    animation: hero-btn;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
 }
 .footer-mid {
   position: relative;
@@ -799,7 +868,7 @@ footer .top-footer .free_seminer{
   background-position: 100% 100%;
 }
 .footer-logo {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 .footer-logo img {
     max-width: 200px;
@@ -850,7 +919,7 @@ footer .top-footer .free_seminer{
   color: var(--blue);
   font-size: 20px;
   font-weight: 600;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   text-transform: uppercase;
   position: relative;
 }
@@ -895,24 +964,156 @@ footer .contact i{
   color: var(--white);
 }
 .copyright-text p a{
-  color: #ff5e14;
+  color: var(--orange);
 }
 .footer-menu li {
   display: inline-block;
   margin-left: 20px;
 }
 .footer-menu li:hover a{
-  color: #ff5e14;
+  color: var(--orange);
 }
 .footer-menu li a {
   font-size: 14px;
   color: #878787;
 }
-
-
-
-
-
+.brands img{
+    max-width: 100%;
+}
+.about h1{
+    font-weight: 600;
+    position: relative;
+    padding-left: 25px;
+    color: var(--blue);
+}
+.about .about_btn{
+    background: var(--blue);
+    color: var(--white);
+    text-decoration: none;
+    padding: 12px 18px;
+    display: inline-block;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-weight: 500;
+    transition: all 0.6s;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+.about .about_btn:hover::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10%;
+    width: 100%;
+    height: 2px;
+    transform: rotate(45deg);
+    background: var(--white);
+    transition: all 0.3s;
+    box-shadow: 0px 0px 10px var(--white),
+                0px 0px 20px var(--white),
+                0px 0px 10px var(--white),
+                0px 0px 10px var(--white);
+    z-index: -1;
+    animation: hero-btn;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+.about h1::before{
+    content: '';
+    width: 5px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: var(--orange);
+}
+.workshop .wokspece_navs{
+    margin-top: 13px;
+}
+.workshop .wokspece_navs_item{
+    padding: 0px 3px;
+}
+.mission_vision .card{
+    border: none;
+    padding: 25px;
+    border-radius: 0px;
+}
+.mission_vision .card h3{
+    color: var(--blue);
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+.mission_vision .Mission{
+    background: #E4EEF7;
+}
+.mission_vision .Vision{
+    background: #FFF1E4;
+}
+.mission_vision .History{
+    background: #E4EEF7;
+}
+.courses .card{
+    text-align: center;
+    padding: 22px;
+    background: #E4EEF7;
+    height: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: none;
+}
+.courses .card a{
+    text-decoration: none;
+    color: var(--dark);
+}
+.courses .card img{
+    width: 60px;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+.workspecePrevArrow.slick-arrow {
+  position: absolute;
+  top: 50%;
+  left: 1%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  background: #ffffff;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: var(--orange);
+  font-size: 18px;
+  font-weight: 600;
+  -webkit-transition: all linear 0.3s;
+  transition: all linear 0.3s;
+  cursor: pointer;
+  z-index: 11;
+}
+.workspeceNextArrow.slick-arrow {
+  position: absolute;
+  top: 50%;
+  right: 1%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  background: #ffffff;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: var(--orange);
+  font-size: 18px;
+  font-weight: 600;
+  -webkit-transition: all linear 0.3s;
+  transition: all linear 0.3s;
+  cursor: pointer;
+}
 
 @keyframes btn {
   from {left: -100%;}
@@ -1003,5 +1204,33 @@ footer .contact i{
       position: absolute;
       right: 18%;
       top: 40%;
+    }
+    .footer-widget-heading h3 {
+      margin-bottom: 25px;
+    }
+    .copyright-area{
+      padding: 10px 0;
+    }
+    .free_seminer{
+        padding: 10px 42px;
+    }
+    .demo_class{
+        padding: 10px 22px;
+    }
+    .browse_course{
+        padding: 10px 52px;
+    }
+    .hero {
+      padding-top: 50px;
+    }
+    .brands img{
+        max-width: 50%;
+    }
+    .footer-widget-heading h3::before {
+      left: 50%;
+      transform: translate(-50%);
+    }
+    .workshop .wokspece_img{
+        padding: 0 7px;
     }
 }
