--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,22 @@ nav .nav-bar .logo a{
     color: var(--dark);
     text-decoration: none;
 }
+.nav_success_btn{
+    background-image: linear-gradient(-225deg, var(--blue) 0%, var(--blue) 29%, var(--orange) 67%, var(--orange) 100%);
+    background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textanim 2s linear infinite;
+  display: inline-block;
+}
+@keyframes textanim {
+    to {
+        background-position: 200% center;
+    }
+}
 .menu .logo-toggle{
     display: none;
 }
@@ -768,94 +784,108 @@ footer {
   background: var(--gray);
   position: relative;
 }
-footer .top-footer a{
-    border-radius: 0px !important;
-    border: none;
-}
 footer .top-footer h2{
     color: var(--blue);
 }
-footer .top-footer .demo_class{
-    background-color: var(--blue);
-    color: var(--white);
-    transition: all 0.6s;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
+footer .top-footer a {
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  color: var(--dark);
+  padding: 0.7em 1.7em;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  border: none;
+  box-shadow: 6px 6px 12px #9d9797, -6px -6px 12px var(--white)
 }
-footer .top-footer .demo_class:hover::before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 10%;
-    width: 100%;
-    height: 2px;
-    transform: rotate(45deg);
-    background: var(--white);
-    transition: all 0.3s;
-    box-shadow: 0px 0px 10px var(--white),
-                0px 0px 20px var(--white),
-                0px 0px 10px var(--white),
-                0px 0px 10px var(--white);
-    z-index: -1;
-    animation: hero-btn;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
+
+footer .top-footer a:active {
+  color: #666;
+  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px var(--white);
 }
-footer .top-footer .browse_course{
-    background-color: var(--orange);
-    color: var(--white);
-    transition: all 0.6s;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
+
+footer .top-footer a:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
 }
-footer .top-footer .browse_course:hover::before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 10%;
-    width: 100%;
-    height: 2px;
-    transform: rotate(45deg);
-    background: var(--white);
-    transition: all 0.3s;
-    box-shadow: 0px 0px 10px var(--white),
-                0px 0px 20px var(--white),
-                0px 0px 10px var(--white),
-                0px 0px 10px var(--white);
-    z-index: -1;
-    animation: hero-btn;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
+
+footer .top-footer a:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: var(--blue);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
 }
-footer .top-footer .free_seminer{
-    background-color: var(--blue);
-    color: var(--white);
-    transition: all 0.6s;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
+
+footer .top-footer a:hover {
+  color: var(--white);
+  border: none;
 }
-footer .top-footer .free_seminer:hover::before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 10%;
-    width: 100%;
-    height: 2px;
-    transform: rotate(45deg);
-    background: var(--white);
-    transition: all 0.3s;
-    box-shadow: 0px 0px 10px var(--white),
-                0px 0px 20px var(--white),
-                0px 0px 10px var(--white),
-                0px 0px 10px var(--white);
-    z-index: -1;
-    animation: hero-btn;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
+
+footer .top-footer a:hover:before {
+  top: -35%;
+  background-color: var(--blue);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
+
+footer .top-footer .browse_course:hover:after {
+  top: -45%;
+  background-color: var(--orange);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+footer .top-footer .browse_course:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: var(--orange);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+footer .top-footer .browse_course:hover {
+  color: var(--white);
+  border: none;
+}
+
+footer .top-footer .browse_course:hover:before {
+  top: -35%;
+  background-color: var(--orange);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+footer .top-footer .browse_course:hover:after {
+  top: -45%;
+  background-color: var(--orange);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
 .footer-mid {
   position: relative;
   z-index: 2;
@@ -1122,7 +1152,12 @@ footer .contact i{
     text-align: center;
     color: var(--dark);
     border: none;
-    border-radius: 20px;
+    border-radius: 20px;/*
+    box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.1), 
+                -6px -6px 10px -1px rgba(0, 0, 0, 0.1);*/
+}
+.contact .socal-card:hover{
+    box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
 }
 .contact .socal-card img{
     width: 60px;
@@ -1134,11 +1169,20 @@ footer .contact i{
     text-align: center;
     color: var(--dark);
     border: none;
-    border-radius: 20px;
+    border-radius: 20px;/*
+    box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.1), 
+                -6px -6px 10px -1px rgba(0, 0, 0, 0.1);*/
+}
+.contact .contact-card:hover{
+    box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
 }
 .contact .socal-card .mail a{
     text-decoration: none !important;
     color: var(--dark) !important;
+}
+.contact .socal-card .small-title{
+    color: var(--dark) !important;
+    font-weight: 500;
 }
 .contact .socal-card .socal-icon a{
     color: var(--dark) !important;
@@ -1572,13 +1616,13 @@ footer .contact i{
       padding: 10px 0;
     }
     .free_seminer{
-        padding: 10px 42px;
+        padding: 10px 42px !important;
     }
     .demo_class{
-        padding: 10px 22px;
+        padding: 10px 22px !important;
     }
     .browse_course{
-        padding: 10px 52px;
+        padding: 10px 52px !important;
     }
     .hero {
       padding-top: 50px;
